--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
     "vue": "^3.2.13"
   },
     "browserslist": [
-      "> 1%",
-      "last 2 versions",
-      "not dead",
-      "not ie 11"
+      "default"
   ],
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
